--- a/src/custom.css
+++ b/src/custom.css
@@ -32,6 +32,13 @@ footer {
   width: 100%;
 }
 
+table.dataTable>tbody>tr.child ul.dtr-details {
+  display: block;
+}
+table.dataTable>tbody>tr.child ul.dtr-details>li {
+  text-align: left !important;
+}
+
 #my-addresses-table input:focus {
   box-shadow: none;
   outline: 0;
@@ -49,4 +56,36 @@ footer {
 }
 .swal2-top-end {
   max-width: 33%;
+}
+
+.visible-sr {
+  display: none !important;
+}
+
+.hidden-sr {
+  display: flex;
+}
+
+@media (max-width:991px) {
+  .visible-sr {
+    display: inline-flex !important;
+  }
+
+  .hidden-sr {
+    display: none;
+  }
+}
+
+#mobile-menu .list-group  {
+  width: 100%;
+}
+
+.footer .btn {
+  font-size: 26px;
+  /* width: 40px; */
+  /* height: 40px; */
+  /* padding: .25rem .4rem; */
+}
+.footer .btn .icon {
+  line-height: 32px !important;
 }
