--- a/src/custom.css
+++ b/src/custom.css
@@ -4,11 +4,11 @@ html {
 }
 
 body {
-  margin-bottom: 80px;
+  margin-bottom: 80px !important;
 }
 
 header {
-  margin-bottom: 80px;
+  padding-bottom: 90px;
 }
 
 footer {
